@@ -7,6 +7,7 @@
 * gadu: #2620 fixed: restored downloading big avatars (beevvy)
 * build: migrated to GNUInstallDirs CMake module which should fix installation paths on Debian multiarch (beevvy)
 * qt4_docking: #2627 fixed: fixed context menu in bottom panel in Ubuntu 12.04 GNOME Classic session (beevvy)
+* icons: #2629 fixed: fixed tray icon size in some cases (beevvy)
 
 +++ version 0.12.0
 * gui: better preview in configuration window (Vogel)
